# tp-systemes-sr2

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md
src/tp0/: CMakeLists.txt  exo2.c
src/tp1/: CMakeLists.txt  boucler.c  boucler_v2.c  exo1a.c  exo1b.c
src/tp2/: CMakeLists.txt  exo1.c  exo2.c
src/tp3/: exo1v1.c  exo1v2.c  exo2.c  exo3.c
tp0/: exo1  exo1.c  exo2  exo2.c
tp1/: boucler  boucler.c  boucler_v2  boucler_v2.c  exo1a  exo1a.c  exo1b  exo1b.c  exo3  exo3.c  exo4  exo4.c
tp2/: exo1  exo1.c  exo2  exo2.c
